deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ossumit-demo
spec:
  selector:
    app: ossumit-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
